k8s-specifications/vote-v2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote
    version: v2
  name: vote-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
      version: v2
  template:
    metadata:
      labels:
        app: vote
        version: v2
      annotations:
        instrumentation.my-opentelemetry.io/inject-python: "true"
    spec:
      containers:
        - image: us-central1-docker.pkg.dev/awesome-carver-428900-q8/artifact-laboratorio/ms-vote:latest
          name: vote
          ports:
            - containerPort: 80
              name: vote
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          imagePullPolicy: Always
      imagePullSecrets:
        - name: registry-secret 
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
