k8s-specifications/vote-v1-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote
    version: v1
  name: vote-v1
spec:
  type: ClusterIP
  ports:
  - name: vote-service
    port: 5000
    targetPort: 80
  selector:
    app: vote
    version: v1
