k8s-specifications/vote-v2-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote
    version: v2
  name: vote-v2
spec:
  type: ClusterIP
  ports:
  - name: vote-service
    port: 5001
    targetPort: 80
  selector:
    app: vote
    version: v2
