k8s-specifications/grafana-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-virtualservice
  namespace: istio-system
spec:
  hosts:
  - grafana.mvarela.io
  gateways:
  - web-gateway
  http:
  - route:
    - destination:
        host: kube-prometheus-grafana.monitoring.svc.cluster.local
        port:
          number: 80
