k8s-specifications/jaeger-vservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger-virtualservice
  namespace: istio-system
spec:
  hosts:
  - jaeger.mvarela.io
  gateways:
  - web-gateway
  http:
  - route:
    - destination:
        host: jaeger-query.monitoring.svc.cluster.local
        port:
          number: 16686
