k8s-specifications/prometheus-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-virtualservice
  namespace: istio-system
spec:
  hosts:
  - prometheus.mvarela.io
  gateways:
  - web-gateway
  http:
  - route:
    - destination:
        host: kube-prometheus-kube-prome-prometheus.monitoring.svc.cluster.local
        port:
          number: 9090
