k8s-specifications/result-vservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: result-virtualservice
  namespace: istio-system
spec:
  hosts:
  - vote.mvarela.io
  gateways:
  - web-gateway
  http:
  - match:
    - uri:
        prefix: /result
    route:
    - destination:
        host: result.voting-app.svc.cluster.local
        port:
          number: 5001
