k8s-specifications/vote-vservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: voting-virtualservice
  namespace: istio-system
spec:
  hosts:
  - vote.mvarela.io
  gateways:
  - web-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: vote-v1.voting-app.svc.cluster.local
        port:
          number: 5000
        subset: v1
      weight: 50
    - destination:
        host: vote-v2.voting-app.svc.cluster.local
        port:
          number: 5001
        subset: v2
      weight: 50
